# RssHub

./: .env.example  .gitignore  AGENTS.md  HTML_ENTITY_DECODE_FIX.md  README.md  UPLOAD_MEMOS.md  config.py  fetcher.py  log_utils.py  main.py  pyproject.toml  requirements.txt  rsshub.service  service.sh  sources.yaml  storage.py  sync.py  test_sources.py  upload_to_memos.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  templates_config.py
app/routes/: exports.py  feeds.py  items.py  shares.py
app/services/: article_store.py  content_fetcher.py  feed_manager.py  preference.py  reading_pipeline.py  rss_fetcher.py  scheduler.py  scorer.py  summarizer.py  translator.py
app/templates/: base.html  home.html  inbox.html  item_detail.html  reading.html  share.html
docs/plans/: 2026-02-24-rss-hub-design.md  2026-02-24-rss-hub.md  2026-03-23-rsshub-design.md  2026-03-23-rsshub-implementation.md  2026-03-24-development-roadmap.md  2026-03-28-reading-experience-design.md  2026-03-28-reading-experience-implementation.md  2026-04-02-pipeline-impl.md  2026-04-02-pipeline-redesign.md
scripts/: clean_html.py  init_feeds.py  sync_once.py
tests/: conftest.py  test_content_fetcher.py  test_e2e.py  test_feeds_route.py  test_items_route.py  test_preference.py  test_reading_pipeline.py  test_rss_fetcher.py  test_scorer.py  test_summarizer.py  test_translator.py
