[project]
name = "rsshub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sqlalchemy",
    "aiosqlite",
    "httpx",
    "feedparser",
    "chromadb",
    "apscheduler",
    "pydantic-settings",
    "python-dotenv",
    "jieba",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
