[project]
name = "rsshub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "sqlalchemy",
    "aiosqlite",
    "httpx",
    "feedparser",
    "chromadb",
    "apscheduler",
    "pydantic-settings",
    "python-dotenv",
    "jieba",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "markdownify>=1.2.2",
    "markdown>=3.10.2",
    "beautifulsoup4>=4.14.3",
    "patchright>=1.22.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
